<resources>
    <string name="app_name">FirstTry</string>
    <string name="Start">Inizia</string>
    <string name="Welcome">Benvenuti al Circolo</string>
    <string name="Home">Home</string>
    <string name="Search">Ricerca</string>
    <string name="Profile">Profilo</string>
    <string name="LessonReserve">Prenota Lezione</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeWelcome">Benvenuto nella Home</string>
    <string name="UserSearch">Cerca un utente</string>
    <string name="UserProfile">Profilo Utente</string>
    <string name="LessonBook">Prenota una Lezione</string>
    <string name="search_for_courts_lessons_etc">Search for courts, lessons, etc.</string>
    <string name="cerca">Cerca</string>
    <string name="risultati">Risultati</string>
    <string name="seleziona_data">Seleziona data</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="seleziona_ora">Seleziona ora</string>
    <string name="hh_mm">HH:MM</string>
    <string name="prenota_lezione">Prenota lezione</string>
    <string name="salva_profilo">Salva profilo</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="immagine_profilo">Immagine profilo</string>
    <string name="profilo_utente">Profilo utente</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati!</string>
    <string name="registrati">Registrati</string>
    <string name="username">Username</string>
    <string name="esci">Esci</string>
    <string name="admin_home_label">Admin home label</string>
    <string name="impostazioni">Impostazioni</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="impostazioni_circolo">Impostazioni circolo</string>
    <string name="impostazioni_utenti">Impostazioni utenti</string>
    <string name="impostazioni_campi">Impostazioni campi</string>
    <string name="modifica">Modifica</string>
    <string name="vedi_dettagli">Vedi dettagli</string>
    <string name="username_o_email">Username o Email</string>
    <string name="elimina">Elimina</string>
    <string name="gestisci_campi">Gestisci campi</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="registra">Registra</string>
    <string name="vedi_disponibilita">Vedi disponibilità</string>
    <string name="prenota_un_campo">Prenota un campo</string>
    <string name="renditi_disponibile">Renditi disponibile</string>
    <string name="dd_mm_yyyy">dd/MM/YYYY</string>
    <string name="segnalazioni">Segnalazioni ricevute</string>
    <string name="bandisci">Bandisci</string>
    <string name="sospendi">Sospendi</string>
    <string name="segnalazione">Segnalazione</string>
    <string name="data_segnalazione">Data segnalazione</string>
    <string name="riammetti_al_circolo">Riammetti al circolo</string>
    <string name="nessuna_segnalazione_ricevuta">Nessuna segnalazione ricevuta</string>
    <string name="nome_utente">Nome utente</string>
    <string name="email_utente">Email utente</string>
    <string name="tipo_utente">Tipo utente</string>
    <string name="segnala">Segnala</string>
    <string name="rank">Rank</string>
    <string name="segnala_nome_utente">Segnala {nome_utente}</string>
    <string name="testo_segnalazione">Testo segnalazione</string>
    <string name="invia_segnalazione">Invia segnalazione</string>
    <string name="elimina_segnalazione">Elimina segnalazione</string>
    <string name="stato">Stato</string>
    <string name="lascia_una_recensione">Lascia una recensione</string>
    <string name="nuova_recensione">Nuova recensione</string>
    <string name="testo_recensione">Testo recensione</string>
    <string name="invia">Invia</string>
    <string name="numero_di_stelle">Numero di stelle</string>
    <string name="recensioni_ricevute">Recensioni ricevute</string>
    <string name="recensione">Recensione</string>
    <string name="data_recensione">Data recensione</string>
    <string name="nessuna_recensione">Nessuna recensione</string>
    <string name="reputazione">Reputazione</string>
    <string name="gestisci_insegnanti">Gestisci insegnanti</string>
    <string name="impostazioni_maestri">Impostazioni maestri</string>
    <string name="indietro">Indietro</string>
    <string name="gestisci_orari">Gestisci orari</string>
    <string name="seleziona_orario_di_inizio">Seleziona orario di inizio</string>
    <string name="seleziona_orario_di_fine">Seleziona orario di fine</string>
    <string name="aggiungi_lezione">Aggiungi lezione</string>
    <string name="seleziona_campo">Seleziona campo</string>
    <string name="elimina_lezione">Elimina lezione</string>
    <string name="prenotati">Prenotati</string>
    <string name="annulla_prenotazione">Annulla prenotazione</string>
    <string name="vedi_lezioni_prenotate">Vedi lezioni prenotate</string>
    <string name="vedi_campi_prenotati">Vedi campi prenotati</string>
    <string name="lezioni_prenotate">Lezioni prenotate</string>
    <string name="campi_prenotati">Campi prenotati</string>
    <string name="utenti_da_invitare">Utenti da invitare</string>
    <string name="prenota">Prenota</string>
    <string name="invita">Invita</string>
    <string name="vedi_inviti_ricevuti">Vedi inviti ricevuti</string>
    <string name="accetta">Accetta</string>
    <string name="accettato">Accettato</string>
    <string name="rifiuta">Rifiuta</string>
    <string name="rifiutata">Rifiutata</string>
    <string name="inviti_ricevuti">Inviti ricevuti</string>
    <string name="score">Score</string>
    <string name="scaduto">Scaduto</string>
    <string name="seleziona_un_immagine">Seleziona un\' immagine</string>
    <string name="modifica_immagine_profilo">Modifica immagine profilo</string>
    <string name="invito_accettato">Invito accettato</string>
    <string name="accettazione_invito">Accettazione invito</string>
    <string name="invito_rifiutato">Invito rifiutato</string>
    <string name="vedi_lezioni_da_tenere">Vedi lezioni da tenere</string>
    <string name="time">Time</string>
    <string name="court">court</string>
    <string name="lezioni_in_programma">Lezioni in programma</string>
    <string name="modifica_immagine_circolo">Modifica immagine circolo</string>
    <string name="salva_impostazioni">Salva impostazioni</string>
    <string name="amministrazione">Amministrazione</string>
    <string name="hai_gi_un_account_esegui_il_login">Hai già un account? Esegui il login!</string>
    <string name="campo">Campo</string>
    <string name="tempo">Tempo</string>
    <string name="inviti_accettati">Inviti accettati:</string>
    <string name="annulla_invito">Annulla invito</string>
</resources>