<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/impostazioni" />

        <Button
            android:id="@+id/buttonClubSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impostazioni_circolo"
            android:layout_marginTop="32dp" />

        <Button
            android:id="@+id/buttonUsersSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/impostazioni_utenti" />

        <Button
            android:id="@+id/buttonCourtsSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/impostazioni_campi" />

        <Button
            android:id="@+id/buttonTeacherSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/impostazioni_maestri" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/indietro" />
    </LinearLayout>

</FrameLayout>