<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gestisci_orari"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_data"
            android:paddingBottom="8dp"/>

        <com.example.firsttry.extensions.ValidatedEditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_orario_di_inizio"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <com.example.firsttry.extensions.ValidatedEditText
            android:id="@+id/edit_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hh_mm"
            android:inputType="time"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_orario_di_fine"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <com.example.firsttry.extensions.ValidatedEditText
            android:id="@+id/edit_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hh_mm"
            android:inputType="time"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_campo"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <Spinner
            android:id="@+id/court_view_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_lezione"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addedLessonsRecyclerView"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/indietro" />
    </LinearLayout>
</ScrollView>