<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenota_un_campo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleziona_data"
        android:paddingBottom="8dp"/>

    <com.example.firsttry.extensions.ValidatedEditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dd_mm_yyyy"
        android:inputType="text"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleziona_ora"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <com.example.firsttry.extensions.ValidatedEditText
        android:id="@+id/edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hh_mm"
        android:inputType="time"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btn_search_available_courts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vedi_disponibilita"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/availableCourtsRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>