<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profilo_utente"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/immagine_profilo"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center"/>

        <com.example.firsttry.extensions.ValidatedEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nome"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>

        <com.example.firsttry.extensions.ValidatedEditText
            android:id="@+id/edit_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/bio"
            android:inputType="textLongMessage"
            android:padding="8dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salva_profilo"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esci"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>