<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/court"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/court"
        android:textSize="16sp" />

    <Button
        android:id="@+id/action_delete_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elimina_lezione" />
</LinearLayout>